@@ -1,7 +1,7 @@
 # Capistrano task for Resque::Forker.
 #
 # To use these tasks, require "resque/capistrano" at the top of the Capfile and
-# associate your woker instances with the role 'workers'.
+# associate your woker instances with the role 'worker'.
 #
 # Performs workers:reload after deploy:restart, workers:suspend before
 # deploy:web:disable and workers:resume after deploy:web:enable.
@@ -12,19 +12,19 @@ Capistrano::Configuration.instance(:must_exist).load do
 
   namespace :workers do
     desc "Suspend all resque workers"
-    task :suspend, :roles=>:workers do
+    task :suspend, :roles=>:worker do
       run "status workers | cut -d ' ' -f 4 | xargs kill -USR2"
     end
     desc "Resume all workers that have been paused"
-    task :resume, :roles=>:workers do
+    task :resume, :roles=>:worker do
       run "status workers | cut -d ' ' -f 4 | xargs kill -CONT"
     end
     desc "Reload all workers"
-    task :reload, :roles=>:workers do
+    task :reload, :roles=>:worker do
       run "reload workers"
     end
     desc "List Resque processes"
-    task :pids, :roles=>:workers do
+    task :pids, :roles=>:worker do
       puts capture("ps aux | grep [r]esque")
     end
   end
